--- a/WebApp/Areas/Admin/Views/Booking/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Booking/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Quản lý đặt phòng";
 }
-
+@section Styles {
+    <link href="~/assets/admin/css/responsive.css" rel="stylesheet" />
+}
 @section Scripts {
     <script src="~/admin-app/controllers/booking/index.js" asp-append-version="true"></script>
     <script>
@@ -9,7 +11,6 @@
         bookingObj.initialize();
     </script>
 }
-
 <!-- start page title -->
 <div class="row">
     <div class="col-12">
@@ -25,7 +26,6 @@
     </div>
 </div>
 <!-- end page title -->
-
 <div class="row">
     <div class="col-12">
         <div class="card">
@@ -43,33 +43,34 @@
                         </button>
                     </div>
                 </div>
-
-                <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
-                    <thead>
-                        <tr class="font-weight-bold text-dark">
-                            <th>Stt</th>
-                            <th>Khách hàng</th>
-                            <th>Mã đặt phòng</th>
-                            <th>Ngày nhận</th>
-                            <th>Ngày trả</th>
-                            <th>Số phòng</th>
-                            <th>Dịch vụ</th>
-                            <th>Tổng hóa đơn</th>
-                            <th>Ngày đặt</th>
-                            <th>Trạng thái</th>
-                            <th class="action-columns">Thao tác</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tbl-content">
-                        <tr id="spinnerRow">
-                            <td colspan="10" style="text-align: center;">
-                                <div id="spinner" class="spinner-border text-primary" role="status">
-                                    <div class="loader"></div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="scroll-table">
+                    <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
+                        <thead>
+                            <tr class="font-weight-bold text-dark">
+                                <th>Stt</th>
+                                <th>Khách hàng</th>
+                                <th>Mã đặt phòng</th>
+                                <th>Ngày nhận</th>
+                                <th>Ngày trả</th>
+                                <th>Số phòng</th>
+                                <th>Dịch vụ</th>
+                                <th>Tổng hóa đơn</th>
+                                <th>Ngày đặt</th>
+                                <th>Trạng thái</th>
+                                <th class="action-columns">Thao tác</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tbl-content">
+                            <tr id="spinnerRow">
+                                <td colspan="10" style="text-align: center;">
+                                    <div id="spinner" class="spinner-border text-primary" role="status">
+                                        <div class="loader"></div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <partial name="_PaginationPartial" />
             </div> <!-- end card body-->
         </div> <!-- end card -->
