--- a/WebApp/Areas/Admin/Views/CostOverrun/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/CostOverrun/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Quản lý chi phí phát sinh ";
 }
-
+@section Styles {
+    <link href="~/assets/admin/css/responsive.css" rel="stylesheet" />
+}
 @section Scripts {
     <script src="~/admin-app/controllers/costOverrun/index.js" asp-append-version="true"></script>
     <script>
@@ -46,28 +48,29 @@
                         </button>
                     </div>
                 </div>
-
-                <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
-                    <thead>
-                        <tr class="font-weight-bold text-dark">
-                            <th>Stt</th>
-                            <th>Tên chi phí</th>
-                            <th>Hình ảnh</th>
-                            <th>Giá</th>
-                            <th>Mô tả</th>
-                            <th class="action-columns">Thao tác</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tbl-content">
-                        <tr id="spinnerRow">
-                            <td colspan="10" style="text-align: center;">
-                                <div id="spinner" class="spinner-border text-primary" role="status">
-                                    <div class="loader"></div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="scroll-table">
+                    <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
+                        <thead>
+                            <tr class="font-weight-bold text-dark">
+                                <th>Stt</th>
+                                <th>Tên chi phí</th>
+                                <th>Hình ảnh</th>
+                                <th>Giá</th>
+                                <th>Mô tả</th>
+                                <th class="action-columns">Thao tác</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tbl-content">
+                            <tr id="spinnerRow">
+                                <td colspan="10" style="text-align: center;">
+                                    <div id="spinner" class="spinner-border text-primary" role="status">
+                                        <div class="loader"></div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <partial name="_PaginationPartial" />
             </div> <!-- end card body-->
         </div> <!-- end card -->
