--- a/WebApp/Areas/Admin/Views/VoteBooking/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/VoteBooking/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Quản lý đánh giá";
 }
-
+@section Styles {
+    <link href="~/assets/admin/css/responsive.css" rel="stylesheet" />
+}
 @section Scripts {
     <script src="~/admin-app/controllers/voteBooking/index.js" asp-append-version="true"></script>
     <script>
@@ -9,7 +11,6 @@
         voteBookingObj.initialize();
     </script>
 }
-
 <!-- start page title -->
 <div class="row">
     <div class="col-12">
@@ -25,8 +26,6 @@
     </div>
 </div>
 <!-- end page title -->
-
-
 <div class="row">
     <div class="col-12">
         <div class="card">
@@ -39,36 +38,36 @@
                         </div>
                     </div>
                 </div>
-
-                <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
-                    <thead>
-                        <tr class="font-weight-bold text-dark">
-                            <th>Stt</th>
-                            <th>Tên</th>
-                            <th>Mã đặt phòng</th>
-                            <th>Tiêu đề </th>
-                            <th>Số sao</th>
-                            <th>Bình luận</th>
-                            <th class="action-columns">Thao tác</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tbl-content">
-                        <tr id="spinnerRow">
-                            <td colspan="10" style="text-align: center;">
-                                <div id="spinner" class="spinner-border text-primary" role="status">
-                                    <div class="loader"></div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="scroll-table">
+                    <table id="datatable-buttons" class="table table-striped dt-responsive nowrap">
+                        <thead>
+                            <tr class="font-weight-bold text-dark">
+                                <th>Stt</th>
+                                <th>Tên</th>
+                                <th>Mã đặt phòng</th>
+                                <th>Tiêu đề </th>
+                                <th>Số sao</th>
+                                <th>Bình luận</th>
+                                <th class="action-columns">Thao tác</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tbl-content">
+                            <tr id="spinnerRow">
+                                <td colspan="10" style="text-align: center;">
+                                    <div id="spinner" class="spinner-border text-primary" role="status">
+                                        <div class="loader"></div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <partial name="_PaginationPartial" />
             </div> <!-- end card body-->
         </div> <!-- end card -->
     </div><!-- end col-->
 </div>
 <!-- end row-->
-
 <script id="table-template" type="x-tmpl-mustache">
     <tr>
         <td>{{Order}}</td>
