--- a/WebApp/Views/Identity/ForgotPassword.cshtml
+++ b/WebApp/Views/Identity/ForgotPassword.cshtml
@@ -16,55 +16,69 @@
     <meta name="description" content="Empowering Sustainability with Smart Environmental Accounting | Minimax" />
     <meta name="keywords" content="Minimax" />
 
-    <link rel="icon" href="~/assets/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/png">
     <meta property="og:title" content="@Localizer["ForgotPassword"]" />
     <meta property="og:description" content="Empowering Sustainability with Smart Environmental Accounting | Minimax" />
     <meta property="og:type" content="article" />
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Inter:wght@500;600&display=swap"
           rel="stylesheet">
-    <link href="~/assets/landing-page/css/common.css" rel="stylesheet" media="all" />
-    <link href="~/assets/landing-page/css/login.css" rel="stylesheet" media="all" />
-</head>
 
+    <link href="~/assets/page/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="~/assets/page/css/icons.min.css" rel="stylesheet" type="text/css">
+    <link href="~/assets/page/css/app.min.css" rel="stylesheet" type="text/css">
+</head>
 <body>
-    <div class="l-body" id="content">
-        <div class="login-wrap">
-            <div class="login-inner d-flex flex-wrap align-items-center justify-content-center">
-                <div class="wrap-forgot-password">
-                    @if (string.IsNullOrEmpty(Model.Email))
-                    {
-                        <form asp-action="ForgotPassword" method="post">
-                            @Html.AntiForgeryToken()
-                            <div asp-validation-summary="All" class="text-danger"></div>
-                            <div class="forgot-password-enter">
-                                <h2>@Localizer["ForgotYourPassword"]</h2>
-                                <p>@Localizer["InputEmail"]</p>
-                                <div class="field form-login p-0">
-                                    <label for="Email">Email</label>
-                                    <div class="field-Email">
-                                        <input id="Email" type="text" class="form-control" placeholder="Email" asp-for="Email" value="@Model.Email">
-                                    </div>
-                                </div>
-                                <button type="submit" class="submit-forgot">@Localizer["Continue"]</button>
+    <div class="account-pages mt-5 mb-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6 col-xl-5">
+                    <div class="card">
+
+                        <div class="card-body p-4">
+
+                            <div class="text-center w-75 m-auto">
+                                <a href="index.html">
+                                    <span><img src="~/assets/landing-page/image/Logo.png" alt="" height="22"></span>
+                                </a>
+                                <p class="text-muted mb-4 mt-3">Enter your email address and we'll send you an email with instructions to reset your password.</p>
                             </div>
-                        </form>
-                    }
-                    else
-                    {
-                        <div class="forgot-password-success">
-                            <h2>@Localizer["EmailOnTheWay"]</h2>
-                            <p>@Localizer["SendMailSuccess1"] <strong>@Model.Email</strong>. @Localizer["SendMailSuccess2"]</p>
-                            <span>
-                                <img src="~/assets/landing-page/img/icon/letter_mess.webp" width="56px" height="56px" alt="letter_mess">
-                            </span>
-                            <a asp-action="Login">@Localizer["Login"]</a>
-                        </div>
-                    }
-                </div>
+                            <form asp-action="ForgotPassword" method="post">
+                                <div class="form-group mb-3">
+                                    <label for="emailaddress">Email address</label>
+                                    <input id="emailaddress" type="text" class="form-control" placeholder="Enter your email" asp-for="Email" value="@Model.Email">
+                                </div>
+                                <div class="form-group mb-0 text-center">
+                                    <button class="btn btn-primary btn-block" type="submit"> Reset Password </button>
+                                </div>
+                            </form>
+                        </div> <!-- end card-body -->
+                    </div>
+                    <!-- end card -->
+                    <div class="row mt-3">
+                        <div class="col-12 text-center">
+                            <p class="text-muted">Back to <a href="/login" class="text-muted font-weight-medium ml-1">Log in</a></p>
+                        </div> <!-- end col -->
+                    </div>
+                    <!-- end row -->
+
+                </div> <!-- end col -->
             </div>
+            <!-- end row -->
         </div>
+        <!-- end container -->
     </div>
+    <!-- end page -->
+
+
+    <footer class="footer footer-alt">
+        2016 - 2019 &copy; Minton theme by <a href="" class="text-muted">Coderthemes</a>
+    </footer>
+
+    <!-- Vendor js -->
+    <script src="assets\js\vendor.min.js"></script>
+
+    <!-- App js -->
+    <script src="assets\js\app.min.js"></script>
+
 </body>
-<script src="~/assets/landing-page/js/jquery.min.js" defer></script>
-<script src="~/assets/landing-page/js/main.js" defer></script>
 </html>
