--- a/WebApp/Views/Identity/Login.cshtml
+++ b/WebApp/Views/Identity/Login.cshtml
@@ -17,8 +17,7 @@
     <meta content="Coderthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- App favicon -->
-    <link rel="shortcut icon" href="assets\images\favicon.ico">
-
+    <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/png">
     <!-- App css -->
     <link href="~/assets/page/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="~/assets/page/css/icons.min.css" rel="stylesheet" type="text/css">
@@ -26,17 +25,14 @@
 </head>
 
 <body>
-
     <div class="account-pages mt-5 mb-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
                     <div class="card">
-
                         <div class="card-body p-4">
-
                             <div class="text-center w-75 m-auto">
-                                <a href="index.html">
+                                <a href="/home">
                                     <span><img src="~/assets/landing-page/image/Logo.png" alt="" height="22"></span>
                                 </a>
                                 <p class="text-muted mb-4 mt-3">Enter your email address and password.</p>
@@ -86,12 +82,11 @@
 
                     <div class="row mt-3">
                         <div class="col-12 text-center">
-                            <p> <a href="pages-recoverpw.html" class="text-muted ml-1">Forgot your password?</a></p>
+                            <p> <a href="/identity/forgot-password" class="text-muted ml-1">Forgot your password?</a></p>
                             <p class="text-muted">Don't have an account? <a href="/identity/register" class="text-primary font-weight-medium ml-1">Sign Up</a></p>
                         </div> <!-- end col -->
                     </div>
                     <!-- end row -->
-
                 </div> <!-- end col -->
             </div>
             <!-- end row -->
@@ -99,8 +94,6 @@
         <!-- end container -->
     </div>
     <!-- end page -->
-
-
     <footer class="footer footer-alt">
         2016 - 2019 &copy; Minton theme by <a href="" class="text-muted">Coderthemes</a>
     </footer>
