--- a/WebApp/Views/Identity/EmailVerify.cshtml
+++ b/WebApp/Views/Identity/EmailVerify.cshtml
@@ -13,33 +13,95 @@
 
     <title>@Localizer["EmailVerify"]</title>
 
-    <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/vnd.microsoft.icon">
+    <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/png">
     <meta property="og:title" content="@Localizer["EmailVerify"]" />
     <meta property="og:type" content="article" />
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Inter:wght@500;600&display=swap"
           rel="stylesheet">
-    <link href="~/assets/landing-page/css/common.css" rel="stylesheet" media="all" />
-    <link href="~/assets/landing-page/css/login.css" rel="stylesheet" media="all" />
+    <!-- App css -->
+    <link href="~/assets/admin/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="~/assets/admin/css/icons.min.css" rel="stylesheet" type="text/css">
+    <link href="~/assets/admin/css/app.min.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
-    <div class="l-body" id="content">
-        <div class="login-wrap">
-            <div class="login-inner d-flex flex-wrap align-items-center justify-content-center">
-                <div class="wrap-forgot-password">
-                    <div class="forgot-password-success">
-                        <h2>@Localizer["EmailOnTheWay"]</h2>
-                        <p>@Localizer["SendMailSuccess1"] <strong>@TempData["EmailVerify"]</strong>. @Localizer["SendMailSuccess2"]</p>
-                        <span>
-                            <img src="~/assets/images/letter_mess.webp" width="56px" height="56px" alt="letter_mess">
-                        </span>
-                        <a asp-action="Login">@Localizer["Login"]</a>
+    <style type="text/css">
+        .st0 {
+            fill: #FFFFFF;
+        }
+
+        .st1 {
+            fill: #1abc9c;
+        }
+
+        .st2 {
+            fill: #FFFFFF;
+            stroke: #1abc9c;
+            stroke-width: 2;
+            stroke-miterlimit: 10;
+        }
+
+        .st3 {
+            fill: none;
+            stroke: #FFFFFF;
+            stroke-width: 2;
+            stroke-linecap: round;
+            stroke-miterlimit: 10;
+        }
+    </style>
+    <div class="account-pages mt-5 mb-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6 col-xl-5">
+                    <div class="card">
+                        <div class="card-body p-4">
+                            <div class="text-center w-75 m-auto">
+                                <a href="index.html">
+                                    <span><img src="~/assets/landing-page/image/Logo.png" alt="" height="22"></span>
+                                </a>
+                            </div>
+                            <div class="mt-3 text-center">
+                                <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 98 98" style="height: 120px;" xml:space="preserve">
+                                <g i:extraneous="self">
+                                <circle id="XMLID_50_" class="st0" cx="49" cy="49" r="49"></circle>
+                                <g id="XMLID_4_">
+                                <path id="XMLID_49_" class="st1" d="M77.3,42.7V77c0,0.6-0.4,1-1,1H21.7c-0.5,0-1-0.5-1-1V42.7c0-0.3,0.1-0.6,0.4-0.8l27.3-21.7
+                                                                        c0.3-0.3,0.8-0.3,1.2,0l27.3,21.7C77.1,42.1,77.3,42.4,77.3,42.7z"></path>
+                                <path id="XMLID_48_" class="st2" d="M66.5,69.5h-35c-1.1,0-2-0.9-2-2V26.8c0-1.1,0.9-2,2-2h35c1.1,0,2,0.9,2,2v40.7
+                                                                        C68.5,68.6,67.6,69.5,66.5,69.5z"></path>
+                                <path id="XMLID_47_" class="st1" d="M62.9,33.4H47.2c-0.5,0-0.9-0.4-0.9-0.9v-0.2c0-0.5,0.4-0.9,0.9-0.9h15.7
+                                                                        c0.5,0,0.9,0.4,0.9,0.9v0.2C63.8,33,63.4,33.4,62.9,33.4z"></path>
+                                <path id="XMLID_46_" class="st1" d="M62.9,40.3H47.2c-0.5,0-0.9-0.4-0.9-0.9v-0.2c0-0.5,0.4-0.9,0.9-0.9h15.7
+                                                                        c0.5,0,0.9,0.4,0.9,0.9v0.2C63.8,39.9,63.4,40.3,62.9,40.3z"></path>
+                                <path id="XMLID_45_" class="st1" d="M62.9,47.2H47.2c-0.5,0-0.9-0.4-0.9-0.9v-0.2c0-0.5,0.4-0.9,0.9-0.9h15.7
+                                                                        c0.5,0,0.9,0.4,0.9,0.9v0.2C63.8,46.8,63.4,47.2,62.9,47.2z"></path>
+                                <path id="XMLID_44_" class="st1" d="M62.9,54.1H47.2c-0.5,0-0.9-0.4-0.9-0.9v-0.2c0-0.5,0.4-0.9,0.9-0.9h15.7
+                                                                        c0.5,0,0.9,0.4,0.9,0.9v0.2C63.8,53.7,63.4,54.1,62.9,54.1z"></path>
+                                <path id="XMLID_43_" class="st2" d="M41.6,40.1h-5.8c-0.6,0-1-0.4-1-1v-6.7c0-0.6,0.4-1,1-1h5.8c0.6,0,1,0.4,1,1v6.7
+                                                                        C42.6,39.7,42.2,40.1,41.6,40.1z"></path>
+                                <path id="XMLID_42_" class="st2" d="M41.6,54.2h-5.8c-0.6,0-1-0.4-1-1v-6.7c0-0.6,0.4-1,1-1h5.8c0.6,0,1,0.4,1,1v6.7
+                                                                        C42.6,53.8,42.2,54.2,41.6,54.2z"></path>
+                                <path id="XMLID_41_" class="st1" d="M23.4,46.2l25,17.8c0.3,0.2,0.7,0.2,1.1,0l26.8-19.8l-3.3,30.9H27.7L23.4,46.2z"></path>
+                                <path id="XMLID_40_" class="st3" d="M74.9,45.2L49.5,63.5c-0.3,0.2-0.7,0.2-1.1,0L23.2,45.2"></path>
+                                            </g>
+                                        </g>
+                                    </svg>
+                                <h2>@Localizer["EmailOnTheWay"]</h2>
+                                <p>@Localizer["SendMailSuccess1"] <strong>@TempData["EmailVerify"]</strong>. @Localizer["SendMailSuccess2"]</p>
+                                <a asp-action="Login" class="btn btn-block btn-primary waves-effect waves-light mt-3">@Localizer["Login"]</a>
+                            </div>
+                        </div> <!-- end card-body -->
                     </div>
-                </div>
+                    <!-- end card -->
+                </div> <!-- end col -->
             </div>
+            <!-- end row -->
         </div>
+        <!-- end container -->
     </div>
+    <!-- end page -->
+    <!-- Vendor js -->
+    <script src="assets\js\vendor.min.js"></script>
+    <!-- App js -->
+    <script src="assets\js\app.min.js"></script>
 </body>
-<script src="~/assets/landing-page/js/jquery.min.js" defer></script>
-<script src="~/assets/landing-page/js/main.js" defer></script>
 </html>
