--- a/WebApp/Views/Identity/ResetPassword.cshtml
+++ b/WebApp/Views/Identity/ResetPassword.cshtml
@@ -10,64 +10,74 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-
     <title>@Localizer["ResetPassword"]</title>
-    <meta name="description" content="Empowering Sustainability with Smart Environmental Accounting | Minimax" />
-    <meta name="keywords" content="Minimax" />
-
-    <link rel="icon" href="~/assets/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/png">
     <meta property="og:title" content="@Localizer["ResetPassword"]" />
-    <meta property="og:description" content="Empowering Sustainability with Smart Environmental Accounting | Minimax" />
-    <meta property="og:type" content="article" />
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Inter:wght@500;600&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet" href="~/assets/landing-page/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/assets/landing-page/css/app.css" />
+    <link href="~/assets/page/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="~/assets/page/css/icons.min.css" rel="stylesheet" type="text/css">
+    <link href="~/assets/page/css/app.min.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
-    <div class="l-body" id="content">
-        <div class="login-wrap">
-            <div class="login-inner d-flex flex-wrap align-items-center justify-content-center">
-                <div class="wrap-forgot-password">
-                    @if (!Model.ResetFlag)
-                    {
-                        <form asp-action="ResetPassword" method="post">
-                            @Html.AntiForgeryToken()
-                            <div class="forgot-password-enter">
-                                <h2>@Localizer["ResetYourPassword"]</h2>
+    <div class="account-pages mt-5 mb-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6 col-xl-5">
+                    <div class="card">
+                        <div class="card-body p-4">
+                            <div class="text-center w-75 m-auto">
+                                <a href="/home">
+                                    <span><img src="~/assets/landing-page/image/Logo.png" alt="" height="22"></span>
+                                    <br> <br />
+                                </a>
                                 <p>@Localizer["MessageReset"]</p>
-                                <div asp-validation-summary="All" class="text-danger"></div>
-                                <div class="field form-login p-0">
-                                    <label for="Email">Email</label>
-                                    <input id="Email" type="text" class="form-control" placeholder="Email" asp-for="Email" value="@Model.Email">
-                                </div>
-                                <div class="field form-login p-0 mt-4">
-                                    <label for="Password">@Localizer["Password"]</label>
-                                    <input id="Password" type="password" class="form-control" placeholder="@Localizer["Password"]" asp-for="Password" value="@Model.Password">
-                                </div>
-                                <div class="field form-login p-0 mt-4">
-                                    <label for="ConfirmPassword">@Localizer["ConfirmPassword"]</label>
-                                    <input id="ConfirmPassword" type="password" class="form-control" placeholder="@Localizer["ConfirmPassword"]" asp-for="ConfirmPassword" value="@Model.ConfirmPassword">
-                                </div>
-                                <input type="hidden" asp-for="Token" value="@Model.Token" />
-                                <button type="submit" class="submit-forgot">@Localizer["ResetPassword"]</button>
                             </div>
-                        </form>
-                    }
-                    else
-                    {
-                        <div class="forgot-password-success">
-                            <h2>@Localizer["EmailOnTheWay"]</h2>
-                            <p>@Localizer["EmailSuccess"]</p>
-                            <a asp-action="Login">@Localizer["BackToLogin"]</a>
-                        </div>
-                    }
-                </div>
+                            @if (!Model.ResetFlag)
+                            {
+                                <form asp-action="ResetPassword" method="post">
+                                    <div asp-validation-summary="All" class="text-danger"></div>
+                                    <div class="form-group mb-3">
+                                        <label for="Email">Email address</label>
+                                        <input id="Email" type="text" class="form-control" placeholder="Email" asp-for="Email" value="@Model.Email">
+                                    </div>
+
+                                    <div class="form-group mb-3">
+                                        <label for="password">@Localizer["Password"]</label>
+                                        <input id="Password" type="password" class="form-control" placeholder="@Localizer["Password"]" asp-for="Password" value="@Model.Password">
+                                        <span class="eye_icon"></span>
+                                    </div>
+
+                                    <div class="form-group mb-3">
+                                        <label for="ConfirmPassword">@Localizer["ConfirmPassword"]</label>
+                                        <input id="ConfirmPassword" type="password" class="form-control" placeholder="@Localizer["ConfirmPassword"]" asp-for="ConfirmPassword" value="@Model.ConfirmPassword">
+                                        <span class="eye_icon"></span>
+                                    </div>
+
+                                    <input type="hidden" asp-for="Token" value="@Model.Token" />
+                                    <div class="form-group mb-0 text-center">
+                                        <button class="btn btn-primary btn-block" type="submit"> @Localizer["ResetPassword"] </button>
+                                    </div>
+                                </form>
+                            }
+                            else
+                            {
+                                <div class="forgot-password-success">
+                                    <h2>@Localizer["EmailOnTheWay"]</h2>
+                                    <p>@Localizer["EmailSuccess"]</p>
+                                    <a class="btn btn-primary btn-block" asp-action="Login">@Localizer["BackToLogin"]</a>
+                                </div>
+                            }
+                        </div> <!-- end card-body -->
+                    </div>
+                </div> <!-- end col -->
             </div>
+            <!-- end row -->
         </div>
+        <!-- end container -->
     </div>
+    <!-- Vendor js -->
+    <script src="~/assets/page/js/vendor.min.js"></script>
+    <!-- App js -->
+    <script src="~/assets/page/js/app.min.js"></script>
+    <script src="~/assets/page/js/main.js" defer></script>
 </body>
-<script src="~/assets/landing-page/js/jquery.min.js"></script>
-<script src="~/assets/landing-page/js/main.js" defer></script>
 </html>
