Update icon service

--- a/WebApp/Areas/Admin/Views/Services/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Services/Index.cshtml
@@ -50,7 +50,7 @@
                             <tr class="font-weight-bold text-dark">
                                 <th>Stt</th>
                                 <th>Dịch vụ</th>
-                                <th>Hình ảnh</th>
+                                <th>Icon</th>
                                 <th>Mô tả</th>
                                 <th>Người tạo</th>
                                 <th>Ngày tạo</th>
