--- a/WebApp/Areas/Admin/Views/Services/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/Services/_AddEditModal.cshtml
@@ -15,28 +15,16 @@
                                 <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Tên dịch vụ">
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Icon</label>
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="txtImage" name="txtImage" placeholder="Url Icon">
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label for="txtDescription" class="col-sm-auto control-label no-padding-right">Mô tả </label>
                             <div class="col-sm-12">
                                 <textarea type="text" class="form-control" id="txtDescription" name="txtDescription" placeholder="Mô tả"></textarea>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="txtImage" class="col-sm-2 control-label no-padding-right">Hình ảnh</label>
-                            <div class="d-flex">
-                                <div class="col-sm-10" style="display:none">
-                                    <input type="text" class="form-control" id="txtImageShow" disabled />
-                                    <input type="text" class="form-control" id="txtImage" name="txtImage" hidden />
-                                    <input type="file" id="fileInputImage" style="display:none" />
-                                </div>
-                                <div class="col-sm-2">
-                                    <img id="imagePreview" src="~/assets/images/picture.png" alt="Preview" style="max-width: 100px; max-height: 100px;" />
-                                </div>
-                            </div>
-                            <div class="col-sm-2 mt-1">
-                                <input type="button" style="width:100px" id="btnSelectImg" class="btn btn-primary" value="Chọn ảnh" />
                             </div>
                         </div>
                     </div>
