--- a/WebApp/Views/Identity/Login.cshtml
+++ b/WebApp/Views/Identity/Login.cshtml
@@ -71,7 +71,7 @@
                                         <a href="javascript: void(0);" class="social-list-item border-primary text-primary"><i class="mdi mdi-facebook"></i></a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item border-danger text-danger"><i class="mdi mdi-google"></i></a>
+                                        <a asp-action="LoginWithGoogle" class="social-list-item border-danger text-danger"><i class="mdi mdi-google"></i></a>
                                     </li>
                                 </ul>
                             </div>
