--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="~/assets/landing-page/vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="~/assets/landing-page/vendors/nice-select/css/nice-select.css">
     <link rel="stylesheet" href="~/assets/landing-page/vendors/owl-carousel/owl.carousel.min.css">
+    <link href="~/lib/notifyjs/dist/styles/metro/notify-metro.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;600;700&family=Inter:wght@500;600;700&display=swap"
           rel="stylesheet">
     <!-- main css -->
@@ -169,8 +170,10 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation/dist/additional-methods.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    <script src="~/admin-app/shared/base.js" asp-append-version="true"></script>
     <script src="~/assets/landing-page/js/main.js" asp-append-version="true"></script>
+    <script src="~/admin-app/shared/base.js" asp-append-version="true"></script>
+    <script src="~/lib/notifyjs/dist/notify.js"></script>
+    <script src="~/lib/notifyjs/dist/styles/metro/notify-metro.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             var currentUrl = window.location.href;
